force-app/src/objects/TR1__Send_Out_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Out Schedules</relationshipLabel>
        <relationshipName>Send_Out_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Account_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Send Out Schedules</relationshipLabel>
        <relationshipName>Send_Out_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Cancel_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Duration__c</fullName>
        <label>Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__EmailFrom__c</fullName>
        <label>Email From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Interview_Date_Time__c</fullName>
        <label>Interview Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Interview_Time__c</fullName>
        <label>Interview Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Email_Content__c</fullName>
        <label>Interviewee Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Name__c</fullName>
        <formula>TR1__Interviewee__r.FirstName &amp; &quot; &quot; &amp;  TR1__Interviewee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee_Template_ID__c</fullName>
        <label>Interviewee Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Out Schedules (Interviewee)</relationshipLabel>
        <relationshipName>Send_Out_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Out Schedules (Interviewer 2)</relationshipLabel>
        <relationshipName>Send_Out_Schedules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Out Schedules (Interviewer 3)</relationshipLabel>
        <relationshipName>Send_Out_Schedules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewer_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer 4</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Send Out Schedules (Interviewer 4)</relationshipLabel>
        <relationshipName>Send_Out_Schedules4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewer_Email_Content__c</fullName>
        <label>Interviewer Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewer_Template_ID__c</fullName>
        <label>Interviewer Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewers_Ids__c</fullName>
        <label>Interviewers Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewers_JSON__c</fullName>
        <label>Interviewers JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewers_Names__c</fullName>
        <label>Interviewers Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Interviewers__c</fullName>
        <label>Interviewers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Invite_Responses__c</fullName>
        <label>Invite Responses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Send Out Schedules</relationshipLabel>
        <relationshipName>Send_Out_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Title__c</fullName>
        <formula>TR1__Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Send Out Schedules</relationshipLabel>
        <relationshipName>Send_Out_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <formula>TR1__Send_Out__r.TR1__Rejection_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rejection Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send Mail to Interviewer and Interviewee on creating new Entry</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Invite_To_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invite to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Invite_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invite to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Out_Status__c</fullName>
        <formula>Text(TR1__Send_Out__r.TR1__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Out Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Out__c</fullName>
        <label>Send Out</label>
        <referenceTo>TR1__Send_Out__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>Stage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Time__c</fullName>
        <label>Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Send Out Schedule</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Interviewee__c</columns>
        <columns>TR1__Date__c</columns>
        <columns>TR1__Time__c</columns>
        <columns>TR1__Location__c</columns>
        <columns>TR1__Type__c</columns>
        <columns>TR1__Stage__c</columns>
        <columns>TR1__Account_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SOS-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Send Out Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Out Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>